[metadata]
name = GNPS_RDD
version = 0.1.0
description = A package for RDD counts, analysis, and visualization in reference data driven studies.
long_description = file: README.md
long_description_content_type = text/markdown
author = Alejandro Mendoza
author_email = alejandro.mendozacantu@uantwerpen.be
license = Apache-2.0
license_files = LICENSE.txt
url = https://github.com/bittremieux-lab/gnps-rdd
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Untargeted Metabolomics :: Bio-Informatics

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    plotly
    scikit-learn
    scikit-bio
    gnpsdata @ git+https://github.com/Wang-Bioinformatics-Lab/GNPSDataPackage.git@f4ca8d9b7fab87823179b122b7e4a0a0b62e9d65
python_requires = >=3.8

[options.package_data]
rdd =
    data/*.txt
    data/*.csv
    data/*.tsv

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    twine
    build
